--- a/app.json
+++ b/app.json
@@ -1,5 +1,11 @@
 {
   "expo": {
-    "sdkVersion": "25.0.0"
+    "sdkVersion": "25.0.0",
+    "android": {
+      "package": "com.kitavi.instagramclone",
+      "versionCode": 1,
+      "permissions": [],
+      "icon": "./assets/images/icon.png"
+    }
   }
 }
